--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ABP főoldal</title>
 
+        <!-- favicon -->
+        <!-- <link rel="icon" href=""> -->
         <link rel="stylesheet" href="style.css">
-        <!-- favicon egy sorral föl -->
+        <script src="a.js"></script>
     </head>
 
     <body>
 
-        <header id="navbar">
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">asd</a>
+            <a href="#">asd</a>
+            <a href="#">asd</a>
+            <a href="#">asd</a>
 
-        </header>
+        </div>
 
         <main id="content">
-
+            <div onmouseover="openNav()" class="sidebaropendiv">
+            </div>
         </main>
 
         <footer id="footer">
