breaking sidebar cuz braindead

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <div id="mySidenav" class="sidenav">
+        <div id="sideNav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#">asd</a>
             <a href="#">asd</a>
@@ -25,7 +25,8 @@
         </div>
 
         <main id="content">
-            <div onmouseover="openNav()" class="sidebaropendiv">
+            <div id="sideNavHover" onmouseover="toggleNavBtn()" onmouseout="toggleNavBtn()">
+                
             </div>
         </main>
 
