--- a/r6.html
+++ b/r6.html
@@ -29,10 +29,6 @@
   
   
 
-* {
-  box-sizing: border-box;
-}
-
 
 
 /* Position text in the middle of the page/image */
@@ -47,8 +43,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  
-  padding: 20px;
+  width: 55%;
+  padding: 5px;
   text-align: left;
 }
 a {
@@ -78,15 +74,22 @@ a {
         </div>
             <div class="rightcol">
                 <img src="images/peter/header.png" alt="header?">
-                <div class="snippet">Tom Clancy's Rainbow Six Siege is the latest installment of the acclaimed first-person shooter franchise developed by the renowned Ubisoft Montreal studio.
+                <div class="snippet"><br>
+                     Tom Clancy's Rainbow Six Siege is the latest installment <br>
+                     of the acclaimed first-person shooter franchise <br>
+                     developed by the renowned Ubisoft Montreal studio.
                  </div>
-                 <div class="about">
+                 <div class="about"> <br>
+
                     Last ratings: <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a> <br>
-                    All ratings: <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
+                    All ratings: <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a> <br>
+                    <br>
+                    Megjelenés dátuma: 2015. Dec. 1.
+                    <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
                  </div>
             </div>
-            <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
+           
     </div>
-   
+
 </body>
 </html>
