--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <div class="topnav" id="myTopnav">
+    <div class="topnav" id="topnav">
         <a href="#home" class="active">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn">Jatekok<img onclick="openDrop()" id="dropbtnbtn" src="images/akos/index/arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="openDrop()" id="dropbtnbtn" src="images/akos/index/arrow.png" alt="Balfasz a js dev"></button>
             <div id="dropdown-content" class="hide">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
@@ -27,7 +27,7 @@
             </div>
         </div>
         <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon" onclick="responsive()">&#9776;</a>
     </div>
 
     <main id="content">
