navbar animalas kesz

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="openDrop()" id="dropbtnbtn" src="images/akos/index/arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="toggleDrop()" id="dropbtnbtn" src="arrow.png" alt="Balfasz a js dev"></button>
             <div id="dropdown-content" class="hide">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
@@ -31,8 +31,8 @@
     </div>
 
     <main id="content">
-
-
+        <div style="height: 20px;"><p id="test">asd</p></div>
+        <button onclick="test()">asd</button>
     </main>
 
     <footer id="footer">
