--- a/r6.html
+++ b/r6.html
@@ -7,257 +7,16 @@
     <title>Tom Clancy's Rainbow Six Siege</title>
     <link rel="stylesheet" href="style.css">
     <script src="a.js"></script>
-    <style>
-        h1{
-            font-size: 20pt;
-            text-align: center;
-        }
-        body {
-            margin-left: 500px;
-            margin-right: 500px;
-            background-image: url(images/peter/r6hatter.png);
-            background-repeat: no-repeat;
-            color: aliceblue;
-         
-        }
-        div {
-            box-shadow: black;
-        }
-    .rightcol {
-        float: right;
-    }
   
-  
-  
-
-
-
-/* Position text in the middle of the page/image */
-.header {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.7); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 55%;
-  padding: 5px;
-  text-align: left;
-}
-a {
-    color: #66c0f4;
-    text-decoration: none;
-}
-.rightcol img {
-    height: 151px;
-    width: 324px;
-}
-.rightcol {
-    float: right;
-}
-.leftcol {
-    float: left;
-}
-.show {
-    display: block !important;
-}
-
-@keyframes rotate180 {
-    from {transform: rotate(0);}
-    to {transform: rotate(180deg);}
-}
-
-@keyframes normal {
-    from {transform: rotate(180deg);}
-    to {transform: rotate(0);}
-}
-
-.rotate {
-    animation-name: rotate180;
-    animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-}
-
-.normal {
-    animation-name: normal;
-    animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-    rotate: (180deg);
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #28528e;
-    overflow: hidden;  
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-/* Add an active class to highlight the current page */
-.active {
-    background-color: #447cc9;
-    color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;   
-}
-
-/* Dropdown container - needed to position the dropdown content */
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-/* Style the dropdown button to fit inside the topnav */
-.dropdown .dropbtn {
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-/* Style the dropdown content (hidden by default) */
-#dropdown-content {
-    position: absolute;
-    background-color: #28528e;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.hide {
-    display: none;
-}
-
-/* Style the links inside the dropdown */
-#dropdown-content a {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-/* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #447cc9;
-    color: white;
-}
-
-/* Add a grey background to dropdown links on hover */
-#dropdown-content a:hover {
-    background-color: #447cc9;
-    color: white;
-}
-
-
-#dropbtnbtn {
-    height: 15px;
-    background-color: #28528e;
-    border-radius: 50%;
-    border: 0.5px solid #000;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: 4px;
-    left: 3px;
-}
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 500px) {
-
-    .topnav a:not(:first-child),
-    .dropdown .dropbtn {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 500px) {
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .topnav.responsive .dropdown {
-        float: none;
-    }
-
-    .topnav.responsive #dropdown-content {
-        position: relative;
-    }
-
-    .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-}
-.below {
-    background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.7); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 90%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 55%;
-  padding: 5px;
-  text-align: left;
-}
-.kepkozep {
-    padding-left: 200px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-    </style>
 </head>
-<body>
+<body class="r6bg">
 
     <div class="topnav" id="topnav">
         <a href="#home" class="active">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="openDrop()" id="dropbtnbtn" src="images/akos/index/arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="toggleDrop()" id="dropbtnbtn" src="arrow.png" alt="Balfasz a js dev"></button>
             <div id="dropdown-content" class="hide">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
