--- a/r6.html
+++ b/r6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tom Clancy's Rainbow Six Siege</title>
+    <title>Tom Clancy's Rainbow Six® Siege</title>
     <link rel="stylesheet" href="style.css">
     <script src="a.js"></script>
   
@@ -32,22 +32,22 @@
         <h1>Tom Clancy's Rainbow Six® Siege</h1>
         <hr>
         <div class="leftcol">
-            <iframe width="600" height="337" src="https://www.youtube.com/embed/5Y8H2-uQgwY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+            <iframe width="600" height="337" src="https://www.youtube.com/embed/5Y8H2-uQgwY?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <div class="rightcol">
                 <img src="images/peter/header.png" alt="header?">
                 <div class="snippet"><br>
-                     Tom Clancy's Rainbow Six Siege is the latest installment <br>
-                     of the acclaimed first-person shooter franchise <br>
-                     developed by the renowned Ubisoft Montreal studio.
+                     Tom Clancy's Rainbow Six Siege is the latest <br>
+                    installment of the acclaimed first-person shooter <br> franchise developed by the renowned <br>
+                      Ubisoft Montreal studio.
                  </div>
                  <div class="about"> <br>
 
                     Last ratings: <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a> <br>
                     All ratings: <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a> <br>
                     <br>
-                    Megjelenés dátuma: 2015. Dec. 1.
-                    <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
+                    Date of release: 2015. Dec. 1.
+                    <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">source</a>
                  </div>
             </div>
     </div>
