--- a/ark.html
+++ b/ark.html
@@ -35,7 +35,7 @@
         <div class="header">
             <h1>ARK: Survival Evolved</h1>
             <div class="leftcol">
-                <iframe src="https://www.youtube.com/embed/5fIAPcVdZO8?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5fIAPcVdZO8?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
                 <div class="rightcol">
                     <img src="images/balint/ark.png" alt="header?">
