CSS & HTML template rewamp + favicon

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="topnav" id="topnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
+        <a href="index.html" class="active">Főoldal</a>
+        <a href="">News</a>
         <a href="#contact">Contact</a>
         <div class="dropdown">
             <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="toggleDrop()" id="dropbtnbtn" src="arrow.png" alt="Balfasz a js dev"></button>
