--- a/ark.html
+++ b/ark.html
@@ -28,38 +28,41 @@
                 <a href="#">Link 3</a>
             </div>
         </div>
-        <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="responsive()">&#9776;</a>
+
     </div>
     <div class="main">
         <div class="header">
             <h1>ARK: Survival Evolved</h1>
-            <div class="leftcol">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5fIAPcVdZO8?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-                <div class="rightcol">
-                    <img src="images/balint/ark.png" alt="header?">
-                    <div class="snippet"><br>
-                        Stranded on the shores of a mysterious island, you <br>
-                        must learn to survive. Use skill & cunning to kill,<br> tame,
-                        breed, & ride the Dinosaurs.Developed by<br> 
-                        Studio Wildcard, Instinct Games
-        
-                    </div>
-                    <div class="about"> <br>
-                        Last ratings: <a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Very positive</a> <br>
-                        All ratings: <a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Very positive</a> <br>
-                        <br>
-                        Date of release: 2017. aug. 27.
-                        <a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/">forrás</a>
-                    </div>
+        </div> 
+            <div class="card">
+                <div class="leftcol">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/5fIAPcVdZO8?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
+                <div class="vflex">
+                <div class="rightcol">
+                            <img src="images/balint/ark.png" alt="header?">
+                    <div class="snippet">
+                                <p>
+                                    Stranded on the shores of a mysterious island, you
+                                    must learn to survive. Use skill & cunning to kill,
+                                    breed, & ride the Dinosaurs.Developed by
+                                    Studio Wildcard, Instinct Games
+                                </p>
+                    </div>
+                     <div class="about"> 
+                                <p>Last ratings: <a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Very positive</a></p>
+                                <p>All ratings: <a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Very positive</a></p>
+                                <p>Date of release: 2017. aug. 27.</p>
+                                <p><a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/">forrás</a></p>
+                     </div>
+                </div>
+            </div>
+            </div>
         
-        </div>
-        <div class="below">
+        <div class="card2">
+            <div class="coloumn">
             <h1>About the game</h1>
             <hr>
-            <div class="coloumn">
                 Use your cunning and resources to kill or tame & breed the leviathan dinosaurs and other primeval creatures roaming the land, and team up with or prey on hundreds of other players to survive, dominate... and escape! <br>
                 <hr>
                 <img class="kepkozep" src="images/balint/TameTrainBreedRide.png" alt="gif"> <br>
