--- a/unturned.html
+++ b/unturned.html
@@ -10,7 +10,7 @@
     <script src="a.js"></script>
   
 </head>
-<body class="r6bg">
+<body class="untbg">
 
     <div class="topnav" id="topnav">
         <a href="#home" class="active">Home</a>
