--- a/index.html
+++ b/index.html
@@ -16,29 +16,28 @@
 <body>
     <div class="topnav" id="topnav">
         <a href="index.html" class="active">Főoldal</a>
-        <a href="">News</a>
-        <a href="#contact">Contact</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="toggleDrop()" id="dropbtnbtn" src="arrow.png" alt="Balfasz a js dev"></button>
-            <div id="dropdown-content" class="hide">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()" id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></button>
+            <div id="dropdown-content1" class="hide">
+                <a href="r6.html">R6</a>
+                <a href="mw2.html">MW2</a>
+                <a href="csgo.html">CS:GO</a>
+                <a href="syndicate.html">Syndicate</a>
             </div>
         </div>
-        <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="responsive()">&#9776;</a>
+        <div class="dropdown">
+            <p class="dropbtn" id="dropBtn2">Survival<img class="rotate" onclick="toggleDrop2()" id="dropbtnbtn2" src="arrow.png" alt="Balfasz a js dev"></button>
+            <div id="dropdown-content2" class="hide">
+                <a href="unturned.html">Unturned</a>
+                <a href="subnautica.html">Subnautica</a>
+                <a href="ark.html">ARK</a>
+            </div>
+        </div>
     </div>
 
-    <main id="content">
-        <div style="height: 20px;"><p id="test">asd</p></div>
-        <button onclick="test()">asd</button>
-    </main>
+    <div class="main">
 
-    <footer id="footer">
-
-    </footer>
-
+    </div>
 </body>
 
 </html>
