readme, js, navbar final, template update

--- a/unturned.html
+++ b/unturned.html
@@ -27,9 +27,8 @@
         <a href="#about">About</a>
         <a href="javascript:void(0);" class="icon" onclick="responsive()">&#9776;</a>
     </div>
-
   
-    <div class="main">
+    <div class="main" id="content">
         <div class="header">
             <h1>Tom Clancy's Rainbow Six® Siege</h1>
             <hr>
