subnautica fix syndicate ark+navbar fix

--- a/ark.html
+++ b/ark.html
@@ -17,18 +17,24 @@
 </head>
 <body class="arkbg">
     <div class="topnav" id="topnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Főoldal</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn">Jatekok<img class="rotate" onclick="toggleDrop()" id="dropbtnbtn" src="arrow.png" alt="Balfasz a js dev"></button>
-            <div id="dropdown-content" class="hide">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()" id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></button>
+            <div id="dropdown-content1" class="hide">
+                <a href="r6.html">R6</a>
+                <a href="mw2.html">MW2</a>
+                <a href="csgo.html">CS:GO</a>
+                <a href="syndicate.html">Syndicate</a>
             </div>
         </div>
-
+        <div class="dropdown">
+            <p class="dropbtn" id="dropBtn2">Survival<img class="rotate" onclick="toggleDrop2()" id="dropbtnbtn2" src="arrow.png" alt="Balfasz a js dev"></button>
+            <div id="dropdown-content2" class="hide">
+                <a href="unturned.html">Unturned</a>
+                <a href="subnautica.html">Subnautica</a>
+                <a class="active" href="ark.html">ARK</a>
+            </div>
+        </div>
     </div>
     <div class="main">
         <div class="header">
