--- a/unturned.html
+++ b/unturned.html
@@ -28,7 +28,7 @@
         <div class="dropdown">
             <p class="dropbtn" id="dropBtn2">Survival<img class="rotate" onclick="toggleDrop2()" id="dropbtnbtn2" src="arrow.png" alt="Balfasz a js dev"></p>
             <div id="dropdown-content2" class="hide">
-                <a class="active" href="unturned.html">Unturned</a>
+                <a href="unturned.html">Unturned</a>
                 <a href="subnautica.html">Subnautica</a>
                 <a href="ark.html">ARK</a>
             </div>
@@ -37,7 +37,7 @@
 
     <div class="main" id="content">
         <div class="header">
-            <h1>Tom Clancy's Rainbow Six® Siege</h1>
+            <h1>Unturned</h1>
             <hr>
         </div>
         <div class="card">
@@ -52,47 +52,47 @@
 
                 <div class="Slides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="images/akos/unturned/2. nagy.jpg" style="width:100%">
+                    <img src="images/akos/unturned/2.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="img_mountains_wide.jpg" style="width:100%">
+                    <img src="images/akos/unturned/3.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 6</div>
-                    <img src="img_lights_wide.jpg" style="width:100%">
+                    <img src="images/akos/unturned/4.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 6</div>
-                    <img src="img_nature_wide.jpg" style="width:100%">
+                    <img src="5.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 6</div>
-                    <img src="img_snow_wide.jpg" style="width:100%">
+                    <img src="6.jpg" style="width:100%">
                 </div>
 
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/1. kicsi.jpg" style="width:100%" onclick="currentSlide(1)" alt="3.0 Release Trailer">
+                        <img class="demo cursor" src="images/akos/unturned/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="3.0 Release Trailer">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/2. kicsi.jpg" style="width:100%" onclick="currentSlide(2)" alt="Nelson in PEI construction site">
+                        <img class="demo cursor" src="images/akos/unturned/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Nelson in PEI construction site">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                        <img class="demo cursor" src="images/akos/unturned/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+                        <img class="demo cursor" src="images/akos/unturned/4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+                        <img class="demo cursor" src="images/akos/unturned/5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+                        <img class="demo cursor" src="images/akos/unturned/6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
                     </div>
                 </div>
             </div>
@@ -105,14 +105,14 @@
                         You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
                     </p>
                     <p>Last ratings: <a target="_blank"
-                            href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very
-                            positive</a></p>
-                    <p>All ratings: <a target="_blank"
-                            href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very
-                            positive</a></p>
+                        href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
+                    </p>
+                    <p>All ratings: 
+                        <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
+                    </p>
                     <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                    <p><a target="_blank"
-                            href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
+                    <p>
+                        <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
                     </p>
                 </div>
             </div>
