--- a/unturned.html
+++ b/unturned.html
@@ -77,22 +77,22 @@
 
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="3.0 Release Trailer">
+                        <img class="demo cursor" src="images/akos/unturned/1.jpg" style="width:100%" onclick="currentSlide(1)" title="3.0 Release Trailer">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Nelson in PEI construction site">
+                        <img class="demo cursor" src="images/akos/unturned/2.jpg" style="width:100%" onclick="currentSlide(2)" title="Nelson in PEI construction site">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+                        <img class="demo cursor" src="images/akos/unturned/3.jpg" style="width:100%" onclick="currentSlide(3)" title="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+                        <img class="demo cursor" src="images/akos/unturned/4.jpg" style="width:100%" onclick="currentSlide(4)" title="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+                        <img class="demo cursor" src="images/akos/unturned/5.jpg" style="width:100%" onclick="currentSlide(5)" title="">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/akos/unturned/6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+                        <img class="demo cursor" src="images/akos/unturned/6.jpg" style="width:100%" onclick="currentSlide(6)" title="">
                     </div>
                 </div>
             </div>
@@ -131,11 +131,13 @@
                 <h2>STRUGGLE AGAINST NATURE</h2>
                 Zombies aside nature does plenty to make life hard.
                 
-                Forage wild fruits and vegetables.
-                Hunt animals for pelts and meat, or in some hostile environments become the prey.
-                Fish for food and garbage.
-                Plant a crop and make sure it gets rain.
-                Seek warmth and take shelter from blizzards.
+                <ul>
+                    <li>Forage wild fruits and vegetables.</li>
+                    <li>Hunt animals for pelts and meat, or in some hostile environments become the prey.</li>
+                    <li>Fish for food and garbage.</li>
+                    <li>Plant a crop and make sure it gets rain.</li>
+                    <li>Seek warmth and take shelter from blizzards.</li>
+                </ul>
                 
                 <h2>DEAL WITH OTHER PLAYERS</h2>
                 Friend or foe there's a lot of interesting people online.
